hphp/test/zend/bad/ext/reflection/tests/bug60357.php
<?php
function foo( array $x = array( 'a', 'b' ) ) {}
$r = new ReflectionParameter( 'foo', 0 );
echo $r->__toString();
?>
